const String constInputTextField = 'input_text_field';
const String constEnter          = 'Enter';

const String constMaxLenghtWord ='pneumonoultramicroscopicsilicovolcanoconiosis';

const String constErrNullValidator    = 'A word is required';
const String constErrpatternValidator = 'Only allow letters from the english alphabet';
const String constErrmaxLenght        = 'The word could not longer than:\n pneumonoultramicroscopicsilicovolcanoconiosis';
const String constErrminLenght        = 'The word must be at least 1 letter long';
const String constErrPattern          = r'^[a-zA-Z]+$';

const String constFormbuilderTextName = 'input_text_field';
const String consthintText            = 'Type a new english word';
const String constLabelText           = 'Enter a data';

const String constErrRealworld = 'Enter a real english word';

const String constDefaultErrorText = 'Enter a data';
const String constHighScore        ='Highest Score:';

const String constTitle = 'OTP words test';

const String constRouteInitPage = '/input_page';
const String constRouteListPage = '/list_page';
